Archive2/5b/e4c516c7bc4b02/output
main.cpp: In function 'constexpr bool f(int)':
main.cpp:4:31: error: call to non-constexpr function 'std::basic_ios<_CharT, _Traits>::operator void*() const [with _CharT = char; _Traits = std::char_traits<char>]'
     return bool(std::cout << x);
                               ^
